fix(murmurs): 常設展見出し「量子コンピュータディスコ」の表記を修正

--- a/_murmurs/2026-02-27-miraikan.md
+++ b/_murmurs/2026-02-27-miraikan.md
@@ -38,9 +38,9 @@ tags: [未来館]
 そこには夢洲の空に溶け込む大屋根リングの姿が、息をのむほど美しく収められていました。
 そんな特別な映像を、万博を一緒に行ったお友達と見られて、また1つ思い出が増えました。
 
-## 常設展「量子コンピュータディスコ」
+## 常設展「量子コンピューターディスコ」
 
-未来館の常設展で、一際目を引いたのが「量子コンピュータ・ディスコ」です。この日は整理券が終了しておりDJ体験は叶いませんでしたが、会場で流れている映像を観るだけでその設計の秀逸さに圧倒されました。
+未来館の常設展で、一際目を引いたのが「量子コンピューターディスコ」です。この日は整理券が終了しておりDJ体験は叶いませんでしたが、会場で流れている映像を観るだけでその設計の秀逸さに圧倒されました。
 
 こちらのYouTubeからも同じ動画が見られます。<span id="cite-2"></span>[[2]](#ref-2)
 
